[package]
name = "manticore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.4"
rustyline = "9.1.1"
colored = "2.0.0"
dym = "1.0.1"
ureq = "2.4.0"
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
