[package]
name = "manticore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.4"
rustyline = "10.0.0"
colored = "2.0.0"
dym = "1.0.1"
ureq = "2.4.0"
rand = "0.8.5"
modulo = "0.1.2"
hashbrown = "0.12"


[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]